# grapinator

./: .env  .gitignore  README.md  grapinator.code-workspace  pylintrc  requirements.txt  setup.cfg  setup.py
db/: README.md  northwind.db  report.sql
docker/: Dockerfile  Dockerfile.alpine  Dockerfile.centos  Dockerfile.employeesdb  Dockerfile.grapinatordb  Dockerfile.oracle  Dockerfile.ubuntu  docker_build  docker_build_alpine  docker_build_centos  docker_build_employeesdb  docker_build_grapinatordb  docker_build_oracle  docker_build_ubuntu  docker_run  docker_run_shell  employeesdb.yml  grapinator.yml  grapinator_sakila.yml  grapinatordb.yml
docker/resources/: CreateDatabase.sh  CreateEmployeeDatabase.sh  gqlapi_service.sh  grapinator_service.sh
docs/: 500_error.txt  demo_queries.md  schema_docs.md
grapinator/: __init__.py  app.py  model.py  schema.py  settings.py  svc_cherrypy.py
grapinator/resources/: cert.pem  grapinator.ini  grapinator.ini.docker  grapinator.northwind.ini  grapinator.sakila.ini  grapinator.sakila.ini.docker  logging.conf  northwind_schema.dct  privkey.pem  sakila_schema.dct  schema.dct  schema_single.dct
grapinator/resources/setup_fix/: fix_flask_graphql.sh  graphqlview.py
tests/: test_gql_class_creation.py  test_orm_class_creation.py  test_schema_settings.py
