[metadata]
name = grapinator
version = 1.0.0.dev1
author = NREL
description = Dynamic GraphQL API Creator
long_description = file: README.md

[options]
packages = find:
install_requires = 
    oracledb
    pymysql
    pylint
    CryptoConfig @ git+https://github.com/NREL/CryptoConfig.git
    graphene<=2.1.9
    SQLAlchemy
    graphene_sqlalchemy
    Flask
    Flask-GraphQL
    cherrypy
    Flask-Cors
    wsgi-request-logger
python_requires = >=3.7    
scripts = 
